--- a/vault/Templates/base.html
+++ b/vault/Templates/base.html
@@ -3,12 +3,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Vault</title>
+    <title>{{ user.username }}'s vault</title>
     <link rel="stylesheet" href="{% static 'main.css' %}">
 </head>
 <body>
-
-<h1 class="title">Personal cloud server</h1>
 
 {% block content %}
 {% endblock content %}
