--- a/vault/Templates/home.html
+++ b/vault/Templates/home.html
@@ -3,8 +3,7 @@
 
 {% block content %}
 
-<h2>home.html</h2>
-<h2>{{user.username}}</h2>
+<h1 class="title">{{user.username}}'s personal vault</h1>
 <a href="{% url 'logout' %}">Logout</a>
 
 {% endblock content %}
