--- a/vault/Templates/signup.html
+++ b/vault/Templates/signup.html
@@ -1,18 +1,35 @@
-{% extends './base.html' %}
 {% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Vault</title>
+    <link rel="stylesheet" href="{% static 'main.css' %}">
+</head>
+<body>
 
-{% block content %}
+<h1 class="title">Personal cloud server</h1>
 
 <h2>Sign up:</h2>
+<form method="get" id="go_to_login_form" action="/login"></form>
 <form method="post">
     {% csrf_token %}
     <table class="login">
     {% for field in form %}
         <tr><td>{{ field.label_tag }}</td><td>{{ field }}</td></tr>
+        <label>{{ field.error }}</label>
     {% endfor %}
     </table>
     <br>
     <button type="submit">Sign up</button>
+    <button type="submit" form="go_to_login_form">Back to login</button>
+    <br>
+    {% for field in form %}
+        {% for error in field.errors %}
+            <p class="error">{{ error }}</p>
+        {% endfor %}
+    {% endfor %}
 </form>
 
-{% endblock content %}
+</body>
+</html>
