--- a/vault/Templates/home.html
+++ b/vault/Templates/home.html
@@ -6,4 +6,6 @@
 <h1 class="title">{{user.username}}'s personal vault</h1>
 <a href="{% url 'logout' %}">Logout</a>
 
+<label>{{user_extended.email}}</label>
+
 {% endblock content %}
