--- a/vault/Templates/home.html
+++ b/vault/Templates/home.html
@@ -5,7 +5,12 @@
 
 <h1 class="title">{{user.username}}'s personal vault</h1>
 <a href="{% url 'logout' %}">Logout</a>
-
-<label>{{user_extended.email}}</label>
+<br>
+<a href="{% url 'upload_photo' %}">Upload photo</a>
+<br>
+<a href="{% url 'photos' %}">View photos</a>
 
 {% endblock content %}
+
+
+{# user_extended #}
