--- a/vault/Templates/profile.html
+++ b/vault/Templates/profile.html
@@ -37,6 +37,6 @@
     </table>
 </div>
 
-<h3><a href="{% url 'profile' %}">Edit profile</a></h3>
+<h3><a href="{% url 'edit_profile' %}">Edit profile</a></h3>
 
 {% endblock content %}
